# Ad-Insertion-Sample

./: .gitignore  .travis.yml  ATTRIBUTION.md  CMakeLists.txt  README.md
account/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  acct.py  build.sh  main.py  shell.sh
ad-content/: .dockerignore  CMakeLists.txt  README.md
ad-content/ad-decision/: CMakeLists.txt  Dockerfile  adkeyword.py  build.sh  main.py  metadata.py  nginx.conf  shell.sh
ad-content/archive/: .dockerignore  CMakeLists.txt  Dockerfile  build.sh  shell.sh
ad-content/frontend/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  adstats.py  build.sh  inventory.json  inventory.json.all  inventory.json.vcac-a  inventory.json.xeon  inventory.py  main.py  nginx.conf  shell.sh
ad-decision/: CMakeLists.txt  Dockerfile  README.md  adkeyword.py  build.sh  metadata.py
ad-insertion/: README.md
ad-insertion/ad-static/: build.sh  (+4 more)
cdn/: .dockignore  CMakeLists.txt  Dockerfile  README.md  analytics.py  build.sh  debug.py  main.py  messaging.py  nginx.conf  shell.sh
common/: CMakeLists.txt  Dockerfile  abr_hls_dash.py  build.sh  db.py  messaging.py  shell.sh  workload.py  zkdata.py  zkstate.py
content-provider/: .dockerignore  README.md
doc/: cmake.md  customize.md  dist.md  kubernetes.md  script.md  vcac-a.md
script/: Kubernetes_setup_ubuntu_master.sh  backup.sh  build.sh  deployment.cmake  hddldaemon-vcac-a.sh  mk-dist.sh  restore.sh  scan-yaml.awk  service.cmake  setup-vcac-a.sh  travis_build.sh  update-image.sh
volume/: .gitignore
workload/: CMakeLists.txt  build.sh  main.py  shell.sh
(+351 files in other folders)
